--- a/level_1/project_1/index.html
+++ b/level_1/project_1/index.html
@@ -95,6 +95,21 @@
         </div>
     </header>
 
+    <div class="container mt-4">
+        <div class="container">
+            <div class="container">
+                <div class="container d-flex justify-content-center flex-column">
+                    <h4 class="px-5 mx-5 text-justify  lh-lg">
+                        We make Live, Push and Link — unique software and hardware for music creation and performance. With these products, our community of users creates amazing things.
+                    </h4>
+                    <p class="px-5 mx-5 text-justify lh-lg">
+                        Ableton was founded in 1999 and released the first version of Live in 2001. Our products are used by a community of dedicated musicians, sound designers, and artists from across the world.
+                    
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 
 
