--- a/level_1/project_1/index.html
+++ b/level_1/project_1/index.html
@@ -100,14 +100,33 @@
             <div class="container">
                 <div class="container d-flex justify-content-center flex-column">
                     <h4 class="px-5 mx-5 text-justify  lh-lg">
-                        We make Live, Push and Link — unique software and hardware for music creation and performance. With these products, our community of users creates amazing things.
+                        We make Live, Push and Link — unique software and hardware for music creation and performance.
+                        With these products, our community of users creates amazing things.
                     </h4>
                     <p class="px-5 mx-5 text-justify lh-lg">
-                        Ableton was founded in 1999 and released the first version of Live in 2001. Our products are used by a community of dedicated musicians, sound designers, and artists from across the world.
-                    
+                        Ableton was founded in 1999 and released the first version of Live in 2001. Our products are
+                        used by a community of dedicated musicians, sound designers, and artists from across the world.
+
                 </div>
             </div>
         </div>
+    </div>
+
+
+    <div class="container d-flex justify-content-center flex-wrap ">
+        <div class="container box-1">
+            <div class="container position-relative">
+                <img src="./../project_1/img/photo-1.jpg" alt="" class="img-fluid  position-absolute d-block z-3 ms-3 mt-5">
+            </div>
+        </div>
+        <div class="container box-2 p-5">
+            <div class="container">
+                <img src="./../project_1/img/photo-2.jpg" alt="" class="img-fluid  ">
+
+
+            </div>
+        </div>
+
     </div>
 
 
