office info card added

--- a/level_1/project_1/index.html
+++ b/level_1/project_1/index.html
@@ -100,7 +100,9 @@
             <div class="container">
                 <div class="container d-flex justify-content-center flex-column">
                     <h4 class="px-5 mx-5 text-justify  lh-lg">
-                        We make Live, Push and Link — unique software and hardware for music creation and performance.
+                        We make <span class="text-primary"> Live</span>, <span class="text-primary">Push</span> and
+                        <span class="text-primary">Link</span> — unique software and hardware for music creation and
+                        performance.
                         With these products, our community of users creates amazing things.
                     </h4>
                     <p class="px-5 mx-5 text-justify lh-lg">
@@ -116,7 +118,8 @@
     <div class="container d-flex justify-content-center flex-wrap ">
         <div class="container box-1">
             <div class="container position-relative">
-                <img src="./../project_1/img/photo-1.jpg" alt="" class="img-fluid  position-absolute d-block z-3 ms-3 mt-5">
+                <img src="./../project_1/img/photo-1.jpg" alt=""
+                    class="img-fluid  position-absolute d-block z-3 ms-3 mt-5">
             </div>
         </div>
         <div class="container box-2 p-5">
@@ -127,6 +130,26 @@
             </div>
         </div>
 
+    </div>
+
+
+    <div class="container mt-4">
+        <div class="container">
+            <div class="container">
+                <div class="container d-flex justify-content-center flex-column">
+                    <h4 class="px-5 mx-5 text-justify  lh-lg">
+                        We are more than 350 people from 30 different countries divided between our headquarters in
+                        Berlin and our offices in Los Angeles and Tokyo.
+                    </h4>
+                    <p class="px-5 mx-5 text-justify lh-lg">
+                        Most of us are active musicians, producers, and DJs, and many of us use Live and Push every day.
+                        We come from a wide range of cultural and professional backgrounds. Some of us have PhDs, some
+                        are self-taught, and most of us are somewhere in between. What connects us is the shared belief
+                        that each of us has the skills and knowledge to contribute to something big: helping to shape
+                        the future of music culture.
+                </div>
+            </div>
+        </div>
     </div>
 
 
