photo card added

--- a/level_1/project_1/index.html
+++ b/level_1/project_1/index.html
@@ -153,6 +153,24 @@
     </div>
 
 
+    <div class="container d-flex justify-content-center flex-wrap ">
+        <div class="box-3">
+            <div class="container d-flex justify-content-center g-2 flex-column">
+                <img src="./../project_1/img/photo-3.jpg" alt="" class="img-fluid d-block w-75 mx-auto mt-5"> 
+                <img src="./../project_1/img/photo-4.jpg" alt="" class="img-fluid d-block w-75 mx-auto mt-5"> 
+
+            </div>
+        </div>
+        <div class="container box-4 p-5">
+            <div class="container position-relative">
+                <img src="./../project_1/img/photo-5.jpg" alt="" class="img-fluid  position-absolute mt-5 ">
+
+
+            </div>
+        </div>
+    </div>
+
+
 
 
 
