product info card added

--- a/level_1/project_1/index.html
+++ b/level_1/project_1/index.html
@@ -156,8 +156,8 @@
     <div class="container d-flex justify-content-center flex-wrap ">
         <div class="box-3">
             <div class="container d-flex justify-content-center g-2 flex-column">
-                <img src="./../project_1/img/photo-3.jpg" alt="" class="img-fluid d-block w-75 mx-auto mt-5"> 
-                <img src="./../project_1/img/photo-4.jpg" alt="" class="img-fluid d-block w-75 mx-auto mt-5"> 
+                <img src="./../project_1/img/photo-3.jpg" alt="" class="img-fluid d-block w-75 mx-auto mt-5">
+                <img src="./../project_1/img/photo-4.jpg" alt="" class="img-fluid d-block w-75 mx-auto mt-5">
 
             </div>
         </div>
@@ -174,6 +174,19 @@
 
 
 
+    <div class="container mt-4">
+        <div class="container">
+            <div class="container">
+                <div class="container d-flex justify-content-center flex-column">
+                    <h4 class="px-5 mx-5 text-justify  lh-lg">
+                        We believe it takes focus to create truly outstanding instruments. We only work on a few products and we strive to make them great.
+                    </h4>
+                    <p class="px-5 mx-5 text-justify lh-lg">
+                        Rather than having a one-size-fits-all process, we try to give our people what they need to work their magic and grow. We’ve learned that achieving the best results comes from building teams that are richly diverse, and thus able to explore problems from a wider set of perspectives. We don’t always agree with each other, but opinion and debate are valued and openly encouraged.
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
