--- a/level_1/project_1/index.html
+++ b/level_1/project_1/index.html
@@ -179,10 +179,25 @@
             <div class="container">
                 <div class="container d-flex justify-content-center flex-column">
                     <h4 class="px-5 mx-5 text-justify  lh-lg">
-                        We believe it takes focus to create truly outstanding instruments. We only work on a few products and we strive to make them great.
+                        We believe it takes focus to create truly outstanding instruments. We only work on a few
+                        products and we strive to make them great.
                     </h4>
                     <p class="px-5 mx-5 text-justify lh-lg">
-                        Rather than having a one-size-fits-all process, we try to give our people what they need to work their magic and grow. We’ve learned that achieving the best results comes from building teams that are richly diverse, and thus able to explore problems from a wider set of perspectives. We don’t always agree with each other, but opinion and debate are valued and openly encouraged.
+                        Rather than having a one-size-fits-all process, we try to give our people what they need to work
+                        their magic and grow. We’ve learned that achieving the best results comes from building teams
+                        that are richly diverse, and thus able to explore problems from a wider set of perspectives. We
+                        don’t always agree with each other, but opinion and debate are valued and openly encouraged.
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="container mt-2">
+        <div class="container">
+            <div class="container">
+                <div class="container px-1">
+                    <img src="https://ableton-production.imgix.net/about/poster-meet-the-makers.jpg?auto=format&dpr=1.5&fit=crop&fm=jpg&ixjsv=1.1.3&q=66&w=1067" alt="" class="img-fluid">
                 </div>
             </div>
         </div>
