info card added

--- a/level_1/project_1/index.html
+++ b/level_1/project_1/index.html
@@ -108,6 +108,7 @@
                     <p class="px-5 mx-5 text-justify lh-lg">
                         Ableton was founded in 1999 and released the first version of Live in 2001. Our products are
                         used by a community of dedicated musicians, sound designers, and artists from across the world.
+                    </p>
 
                 </div>
             </div>
@@ -147,6 +148,7 @@
                         are self-taught, and most of us are somewhere in between. What connects us is the shared belief
                         that each of us has the skills and knowledge to contribute to something big: helping to shape
                         the future of music culture.
+                    </p>
                 </div>
             </div>
         </div>
@@ -187,6 +189,7 @@
                         their magic and grow. We’ve learned that achieving the best results comes from building teams
                         that are richly diverse, and thus able to explore problems from a wider set of perspectives. We
                         don’t always agree with each other, but opinion and debate are valued and openly encouraged.
+                    </p>
                 </div>
             </div>
         </div>
@@ -197,7 +200,31 @@
         <div class="container">
             <div class="container">
                 <div class="container px-1">
-                    <img src="https://ableton-production.imgix.net/about/poster-meet-the-makers.jpg?auto=format&dpr=1.5&fit=crop&fm=jpg&ixjsv=1.1.3&q=66&w=1067" alt="" class="img-fluid">
+                    <img src="https://ableton-production.imgix.net/about/poster-meet-the-makers.jpg?auto=format&dpr=1.5&fit=crop&fm=jpg&ixjsv=1.1.3&q=66&w=1067"
+                        alt="" class="img-fluid">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container mt-4">
+        <div class="container">
+            <div class="container">
+                <div class="container d-flex justify-content-center flex-column">
+                    <h4 class="px-5 mx-5 text-justify  lh-lg">
+                        We’re passionate about what we do, but we’re equally passionate about improving who we are.
+                    </h4>
+                    <p class="px-5 mx-5 text-justify lh-lg">
+                        We work hard to foster an environment where people can grow both personally and professionally,
+                        and we strive to create a wealth of opportunities to learn from and with each other.
+                    </p>
+                    <p class="px-5 mx-5 text-justify lh-lg">
+                        Alongside an internal training program, employees are actively supported in acquiring new
+                        knowledge and skills, and coached on applying these in their daily work. In addition,
+                        staff-organized development and music salons are a chance to discuss new technologies,
+                        production techniques and best practices.
+                    </p>
+
                 </div>
             </div>
         </div>
